# engram

./: Cargo.toml  design.md
src/: engine.rs  lib.rs  projection.rs
src/cache/: consolidator.rs  hierarchical.rs  mod.rs  position_map.rs  quantized.rs  shared.rs  store.rs  tiered_retrieve.rs
src/ops/: mod.rs  polar.rs  qjl.rs
src/retrieve/: gpu.rs  mod.rs
